--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>B1W5O2</title>
     <script src="https://kit.fontawesome.com/a3078cd2a7.js" crossorigin="anonymous"></script>
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <ul class="topbar">wow</ul>
+    <div class="topbar">
+        <ol>
+            <li><a href="about:blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="about:blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="about:blank"><i class="fab fa-google-plus-g"></i></a></li>
+            <li><a href="about:blank"><i class="fas fa-rss"></i></a></li>
+        </ol>
+    </div>
 
     <!-- <img src="assets/images/background.jpg" class="background"> -->
 
