--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <img src="assets/images/logo.png" class="logo">
 
+    <!-- geen knop link gedaan -->
     <ul class="icons">
         <i class="fas fa-home">
             <p class="menu-text"><br>HOME</p>
